# together-rs

./: Cargo.toml  LICENSE  README.md  tmp.txt
.github/workflows/: rust.yml
samples/: together.detailed.toml  together.detailed.yml
src/: config.rs  errors.rs  kb.rs  lib.rs  main.rs  manager.rs  process.rs  terminal.rs  terminal_ext.rs  update.rs
