[package]
name = "together-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "together_tmp_v2"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = "3.4.2"
dialoguer = "0.11.0"
dirs = "5.0.1"
serde = { version = "1.0.196", features = ["derive"] }
subprocess = "0.2.9"
toml = "0.8.10"
