[package]
name = "together-rs"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Michael Lawrence <mblawrence27@gmail.com>"]
description = "A simple tool for running multiple commands together"
readme = "README.md"
keywords = ["execute", "process", "command", "cli", "interactive"]
repository = "https://github.com/michaelblawrence/together-rs"

[[bin]]
name = "together"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = "3.4.2"
dialoguer = "0.11.0"
dirs = "5.0.1"
libc = "0.2.153"
semver = "1.0.22"
serde = { version = "1.0.196", features = ["derive"] }
subprocess = "0.2.9"
termion = { version = "4.0.2", optional = true }
toml = "0.8.10"

[features]
default = ["termion"]
